# wormhole-scaffolding

evm/: Makefile
evm/src/modules/utils/: WormholeNft.sol
evm/src/modules/wormhole/: IWormholeNft.sol
solana/: Makefile  package.json  tsconfig.json
solana/.cargo/: config.toml
solana/dependencies/: Makefile  README.md
solana/programs/01_hello_world/: Cargo.toml
solana/programs/01_hello_world/src/: lib.rs  message.rs
solana/programs/02_hello_token/: Cargo.toml
solana/programs/02_hello_token/src/: lib.rs
solana/shell-scripts/: build_mpl_token_metadata.sh  build_wormhole_repo_bpfs.sh
solana/ts/sdk/03_nft_burn_bridging/: index.ts
solana/ts/tests/: 00_environment.ts  01_hello_world.ts  02_hello_token.ts
solana/ts/tests/helpers/: cartesian.ts  consts.ts  index.ts  utils.ts
