[package]
name = "hello-token"
version = "0.1.0"
description = "02 - Hello Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features = ["mainnet", "token-bridge"]}
